psudos on cards no pointer clicks card pointer clicks pg4 background no pointer clicks. cards clickable

--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -1253,17 +1253,7 @@ when refactor set the h's to the same font but different font sizes and have thi
   width: 19px;
   height:15px;/*inherit;*/
 }
-/*
-.aCard{
 
-  background:beige;
-  width:125px;
-  height:150px;
-  border: 2.5px solid black;
-  border-radius: 5px;
-margin:0 auto;
-visibility:inherit;
-}*/
 
 
 .aCard{
@@ -1290,9 +1280,10 @@ position:absolute;
  z-index:1;/*added to help shadow layering*/
 /*  position:absolute;*/ /*z-index:inherit;*//*added to help shadow layering*/
      transform-style: preserve-3d; /*dirty stacking sollution*/
+  pointer-events:all;
 
 }
-/*card shadow*/
+
 .aCard::after{
 
   position:absolute;
@@ -1306,7 +1297,9 @@ position:absolute;
 z-index:-1;
     transform: rotate(3deg);
    transform: translateZ(-1px); /*dirty stacking sollution to get pseudo under acard*/
+     pointer-events:none;
 }
+
 /*for card sheen*/
 
 .aCard::before{
@@ -1318,16 +1311,9 @@ z-index:-1;
     ,
     rgba(225, 225, 225, 0) 80% ,  rgba(225, 225, 225, 0), rgba(221,160,221, 0.2)88%, rgba(255, 255, 255, 0.2) ,  rgba(255, 255, 0, 0.1),  rgba(255, 255,255, 0.2), rgba(255, 255,255, 0.1) ,rgba(255, 255, 255, 0),rgba(255, 255, 255, 0) 94% );
 
-/*works trying to improve
-  background: linear-gradient(140deg,
 
-    rgba(255,255,255,0) 10%, rgba(255,255,255,0.2), rgba(255,255,255,0) 12%, rgba(255,255,255,0)
-    ,
-    rgba(225, 225, 225, 0) 30% , rgba(255, 255, 255, 0.3) 33%, rgba(221,160,221, 0.2)38%, rgba(255, 255, 255, 0.2) 38%, rgba(255, 255, 0, 0.1)  , rgba(255, 255, 255, 0.1), rgba(255, 255, 0, 0.1) 41%,rgba(255, 255, 255, 0.1) 43% ,rgba(255, 255, 255, 0)
-    ,
-    rgba(225, 225, 225, 0) 80% ,  rgba(221,160,221, 0.2)88%, rgba(255, 255, 255, 0.3) 88%,  rgba(255, 255, 0, 0.2),  rgba(255, 255,255, 0.2), rgba(255, 255,255, 0.1) ,rgba(255, 255, 255, 0),rgba(255, 255, 255, 0) 94% );
 
-*/
+
   content:"";
   font-size:0;
 left:0;
@@ -1341,6 +1327,7 @@ position:absolute;
   height:100%;
   z-index:1;
 }
+
 
 
 
@@ -2972,17 +2959,7 @@ when refactor set the h's to the same font but different font sizes and have thi
   width: 19px;
   height:15px;/*inherit;*/
 }
-/*
-.aCard{
 
-  background:beige;
-  width:125px;
-  height:150px;
-  border: 2.5px solid black;
-  border-radius: 5px;
-margin:0 auto;
-visibility:inherit;
-}*/
 .scaleable-wrapper {
 /* position:absolute; */ /*added*/
 /* display:static; */ /*added*/
@@ -2994,54 +2971,9 @@ visibility:inherit;
 }
 
 /*card shadow*/
-.aCard::after{
 
-  position:absolute;
-  content:"";
-  font-size:0;
-  width:80%;
-  height:80%;
-  right:1px;
-   bottom:1px;
-  box-shadow: 0px 0px 3px 3px white, 1px 1px 3px 3px black;
-z-index:-1;
-    transform: rotate(3deg);
-   transform: translateZ(-1px); /*dirty stacking sollution to get pseudo under acard*/
-}
 /*for card sheen*/
 
-.aCard::before{
-    background: linear-gradient(140deg,
-
-    rgba(255,255,255,0) 10%, rgba(255,255,255,0.2), rgba(255,255,255,0) 12%, rgba(255,255,255,0)
-    ,
-    rgba(225, 225, 225, 0) 30% , rgba(255, 255, 255, 0.3) 33%, rgba(221,160,221, 0.2)38%, rgba(255, 255, 255, 0.2), rgba(255, 255, 0, 0.1)  , rgba(255, 255, 255, 0.1), rgba(255, 255, 0, 0.1),rgba(255, 255, 255, 0.1) 43% ,rgba(255, 255, 255, 0)
-    ,
-    rgba(225, 225, 225, 0) 80% ,  rgba(225, 225, 225, 0), rgba(221,160,221, 0.2)88%, rgba(255, 255, 255, 0.2) ,  rgba(255, 255, 0, 0.1),  rgba(255, 255,255, 0.2), rgba(255, 255,255, 0.1) ,rgba(255, 255, 255, 0),rgba(255, 255, 255, 0) 94% );
-
-/*works trying to improve
-  background: linear-gradient(140deg,
-
-    rgba(255,255,255,0) 10%, rgba(255,255,255,0.2), rgba(255,255,255,0) 12%, rgba(255,255,255,0)
-    ,
-    rgba(225, 225, 225, 0) 30% , rgba(255, 255, 255, 0.3) 33%, rgba(221,160,221, 0.2)38%, rgba(255, 255, 255, 0.2) 38%, rgba(255, 255, 0, 0.1)  , rgba(255, 255, 255, 0.1), rgba(255, 255, 0, 0.1) 41%,rgba(255, 255, 255, 0.1) 43% ,rgba(255, 255, 255, 0)
-    ,
-    rgba(225, 225, 225, 0) 80% ,  rgba(221,160,221, 0.2)88%, rgba(255, 255, 255, 0.3) 88%,  rgba(255, 255, 0, 0.2),  rgba(255, 255,255, 0.2), rgba(255, 255,255, 0.1) ,rgba(255, 255, 255, 0),rgba(255, 255, 255, 0) 94% );
-
-*/
-  content:"";
-  font-size:0;
-left:0;
-  top:0;
-  border-radius: 5px;
-visibility:inherit;
-      padding:0; margin:0;
-position:absolute;
-  pointer-events:none;
-  width:100%;
-  height:100%;
-  z-index:1;
-}
 
 
 
