--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -145,17 +145,18 @@ also cause a white space at bottom because now contributes to the height-->
 
         <ul class="myflex-container">
 
-          <li>   <div class="aMarble"><img class="aMarble " src="Images\marbles\codepen.png" alt="codepen marble"></div></li>
-          <li><div class="aMarble"><img class="aMarble " src="Images\marbles\atom-4-logo-png-transparent.png" alt="atom marble"></div></li>
-          <li><div class="aMarble"><img class="aMarble " src="Images\marbles\Csharp_logo.png" alt="csharp marble"></div></li>
-          <li><div class="aMarble"><img class="aMarble " src="Images\marbles\css.png" alt="css marble"></div></li>
-          <li><div class="aMarble"><img class="aMarble " src="Images\marbles\ejslandscape.png" alt="ejs marble"></div></li>
-          <li><div class="aMarble"><img class="aMarble " src="Images\marbles\git.png" alt="git marble"></div></li>
-          <li><div class="aMarble"><img class="aMarble " src="Images\marbles\html.png" alt="html marble"></li>
-          <li><div class="aMarble"><img class="aMarble " src="Images\marbles\javascript-shield.png" alt="js marble"></div></li>
-          <li><div class="aMarble"><img class="aMarble " src="Images\marbles\mongooselogo.jpg" alt="mongoose marble"></div></li>
-          <li><div class="aMarble"><img class="aMarble " src="Images\marbles\nodejs.png" alt="nodejs marble"></div></li>
-          <li><div class="aMarble"><img class="aMarble " src="Images\marbles\unity.png" alt="unity marble"></div></li>
+          <li>   <div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\codepen.png" alt="codepen marble"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\atom-4-logo-png-transparent.png" alt="atom marble"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\Csharp_logo.png" alt="csharp marble"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\git.png" alt="git marble"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\css.png" alt="css marble"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\ejslandscape.png" alt="ejs marble"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\git.png" alt="git marble"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\html.png" alt="html marble"></li>
+          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\javascript-shield.png" alt="js marble"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\mongooselogo.jpg" alt="mongoose marble"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\nodejs.png" alt="nodejs marble"></div></li>
+          <li><div class="aMarble aMarbleGlassEffect"><img class="aMarbleImg " src="Images\marbles\unity.png" alt="unity marble"></div></li>
 
         </ul>
     <div class="glassEffect"></div>
@@ -233,7 +234,7 @@ maybe even ajoining a space for the marble
 </div>
 
 
-      
+
     </div>
 
 
@@ -266,7 +267,7 @@ maybe even ajoining a space for the marble
 
       <!--lots issues with animations and transforms on same object overwriting so a
 div for x axis one for y and the image itself for spin-->
-      <div class="philProfileMarble">
+      <div class="philProfileMarble aMarble">
 
 
         <div class="philProfileMarbleY">
@@ -387,7 +388,7 @@ in 4.3.1 need use order and offset
 
     <div class="marbleOnShape1">
 <div class="aMarbleX"><div class="aMarbleY">
-                  <div class="aMarble" name="batman">
+                  <div class="aMarble aMarbleGlassEffect" name="batman">
           <img class="aMarbleImg " src="Images\marbles\nodejs.png" alt="nodejs marble">
 </div></div>
       </div>
@@ -395,17 +396,19 @@ in 4.3.1 need use order and offset
 
     <div class="marbleOnShape2">
 <div class="aMarbleX"><div class="aMarbleY">
-                <div class="aMarble">
+                <div class="aMarble aMarbleGlassEffect">
           <img class="aMarbleImg " src="Images\marbles\Csharp_logo.png" alt="csharp marble">
 </div></div>
       </div>
     </div>
 
     <div class="marbleOnShape3">
+
 <div class="aMarbleX"><div class="aMarbleY">
-          <div class="aMarble">
+          <div class="aMarble aMarbleGlassEffect invisible">
           <img class="aMarbleImg " src="Images\marbles\git.png" alt="git marble">
 </div></div>
+
 </div>
 
     </div>
