--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -445,13 +445,12 @@ in 4.3.1 need use order and offset
 
 
 
-                  <div class="container containerMagnifier">
 
                     <div class="dial">
-                      <img class="theMagnifier " src="        https://www.clipart1001.com/wp-content/uploads/2018/08/Magnifying-Glass-Clipart-Transparent-Background.png" alt="a magnifier">
+                      <img class="theMagnifierImg " src=" Images\myMagnifier.png" alt="a magnifier">
 
                     </div>
-                  </div>
+
 
                   <!-- keep theses as other options for the future
                 <img class="aMarble " src="        https://longfordpc.com/images/lens-clipart-spy-glass-9.png" alt="a magnifier">
