--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -991,15 +991,16 @@ z-index:4;
 /*at large sizes of px or vh vw get border bottom difference in hieght between two objects
 the two objects are exactly the same i think
 */
-  width: 80vw;
- 	height: 80vh;
+/*    !!!!!!!!!!!!!!!1     if dont want to be covered with the corner                !!!!!!!!!!!!!!!!!!!!!!!1  */
+   width:80vw; /*calc(100% - 100px); */
+ 	height:80vh; /*calc(100% - 100px);*/ /*80ch*/ /*need 100 for top marble*/ /*200 height needed not to touch corner 100 top so marble not hidden by top, extra 100 so its symetrical*/
   /*
    position:absolute;
 */
   z-index: 1;
   display: flex;
   flex-direction: column;
-  margin: auto;
+  margin:auto; /* auto auto 200px;*/
 }
 
 
@@ -2557,21 +2558,6 @@ z-index:4;
 
 
 
-.bestCardsArea {
-
-/*at large sizes of px or vh vw get border bottom difference in hieght between two objects
-the two objects are exactly the same i think
-*/
-  width: 80vw;
- 	height: 80vh;
-  /*
-   position:absolute;
-*/
-  z-index: 1;
-  display: flex;
-  flex-direction: column;
-  margin: auto;
-}
 
 
 .shape2 {
@@ -2670,7 +2656,7 @@ justify-content: flex-start;
 .magnifier{
   width:100px;
   height:100px;
-    background:green;
+
 
   /*or use bootstrap center-block*/
   display: block;
