--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -440,14 +440,14 @@ in 4.3.1 need use order and offset
 
             <div class=" col-sm-8 offset-sm-2 ">
 
-              <div class="alert alert-warning ">
+
                 <div class="magnifier">
 
 
 
 
                     <div class="dial">
-                      <img class="theMagnifierImg " src=" Images\myMagnifier.png" alt="a magnifier">
+                      <img class="theMagnifierImg " src=" Images\myMagnifier3.png" alt="a magnifier">
 
                     </div>
 
@@ -462,7 +462,7 @@ in 4.3.1 need use order and offset
 
               </div>
 
-            </div>
+
           </div>
           <div class="row flex-fill d-flex ">
 
