--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -447,7 +447,7 @@ in 4.3.1 need use order and offset
 
 
                     <div class="dial">
-                      <img class="theMagnifierImg " src=" Images\myMagnifier3.png" alt="a magnifier">
+                      <img class="theMagnifierImg " src=" Images\myMagnifier.png" alt="a magnifier">
 
                     </div>
 
