--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -85,7 +85,7 @@ also cause a white space at bottom because now contributes to the height-->
 
 
 <div class="topRightProjectTechnologiesArea">
-
+<div class ="ribbonLoopShadowSpacer"></div>
                                         </div>
                                         <div class="ribbonEnd">
 
@@ -190,7 +190,7 @@ maybe even ajoining a space for the marble
             <div class="topRightRibbonArea">
 
 
-<div class="topRightProjectTechnologiesArea">
+<div class="topRightProjectTechnologiesArea"><div class ="ribbonLoopShadowSpacer"></div>
               <% for (let i = 0; i<page2BestCard.technologiesArray.length; i++) { %>
 <form class="formTechBtn" action="/carousel" method="get">
   <button class="submitButtonNoStyle" type="submit" name="techButton" value=<%= page2BestCard.technologiesArray[i].technologyName %> >
@@ -479,7 +479,7 @@ in 4.3.1 need use order and offset
 
 
 
-<div class="topRightProjectTechnologiesArea">
+<div class="topRightProjectTechnologiesArea"><div class ="ribbonLoopShadowSpacer"></div>
 
                                 <% for (let i = 0; i<page3SecondBestCard.technologiesArray.length; i++) { %>
 
@@ -525,7 +525,7 @@ in 4.3.1 need use order and offset
                             <div class="topRightRibbonArea">
 
 
-<div class="topRightProjectTechnologiesArea">
+<div class="topRightProjectTechnologiesArea"><div class ="ribbonLoopShadowSpacer"></div>
 
                                <!--loop throough the number of tech items-->
                                                                <% for (let i = 0; i<page3ThirdBestCard.technologiesArray.length; i++) { %>
@@ -575,7 +575,7 @@ in 4.3.1 need use order and offset
                             <div class="topRightRibbonArea">
 
 
-<div class="topRightProjectTechnologiesArea">
+<div class="topRightProjectTechnologiesArea"><div class ="ribbonLoopShadowSpacer"></div>
 
 
                                <!--loop throough the number of tech items-->
