carousel title updates

--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -695,7 +695,7 @@ in 4.3.1 need use order and offset
     <button class="nav noselect right">&gt;</button>
   </div>
 
-      <div class="wrap"><h1>All/Unity/Js... Projects</h1> </div>
+      <div class="wrap"><h1 id="carouselTechTitle"></h1> </div>
       <div class="wrap">
       <button class="nav noselect bottom">&#x25BC; </button>
       <button hidden class="nav noselect top"></button>
