--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -300,7 +300,15 @@ div for x axis one for y and the image itself for spin-->
           <!--the jquery when it disables does no disable unhovering only hovering so when mouse moves during glass flight its stackpath
 changes to what it would of been if it had not been at an angle because of hover-->
 
-          <div class="row drinkChoices">
+        <div class="row drinkChoices">
+
+
+                      <button type="button" name="button" class="drinkButton col-md-1 colTight">
+                        <img id="shotGlass" class=" drinkImages" src="Images/shotGlass.png" alt="shot glass">
+
+                        <button type="button" name="button" class="drinkButton col-md-1 colTight">
+
+                          <img id="tea" class=" drinkImages" src="Images/tea.png" alt="tea">        </button>
 
 
             <button type="button" name="button" class="drinkButton col-md-1 colTight">
@@ -309,36 +317,37 @@ changes to what it would of been if it had not been at an angle because of hover
 
 
             </button>
+            <button type="button" name="button" class="drinkButton col-md-1 colTight">
 
+              <img id="wineGlassSimple" class=" drinkImages" src="Images/wineGlassSimple.png" alt="wine glass">
+
+
+            </button>
+  <!--
             <button type="button" name="button" class="drinkButton col-md-1 colTight">
 
               <img id="cocktailStraw" class="drinkImages" src="Images/cocktailStraw.png" alt="cocktail">
 
 
-            </button>
-
-            <button type="button" name="button" class="drinkButton col-md-1 colTight">
-
-              <img id="tea" class=" drinkImages" src="Images/tea.png" alt="tea">
+            </button> -->
 
 
-            </button>
 
-            <button type="button" name="button" class="drinkButton col-md-1 colTight ">
+
+
+            <!-- <button type="button" name="button" class="drinkButton col-md-1 colTight ">
 
               <img id="martini" class=" drinkImages" src="Images/martiniGlass.png" alt="martini">
 
 
-            </button>
-          </div>
-
-          <div class="row drinkChoices">
-
-            <button type="button" name="button" class="drinkButton col-md-1 colTight">
-              <img id="shotGlass" class=" drinkImages" src="Images/shotGlass.png" alt="shot glass">
+            </button> -->
 
 
-            </button>
+
+
+
+
+            <!-- </button>
 
             <button type="button" name="button" class="drinkButton col-md-1 colTight">
 
@@ -353,14 +362,9 @@ changes to what it would of been if it had not been at an angle because of hover
 
 
             </button>
+ -->
 
-            <button type="button" name="button" class="drinkButton col-md-1 colTight">
-
-              <img id="wineGlassSimple" class=" drinkImages" src="Images/wineGlassSimple.png" alt="wine glass">
-
-
-            </button>
-          </div>
+                </div>
         </h1>
 </div>
       </div>
