--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -283,7 +283,7 @@ div for x axis one for y and the image itself for spin-->
 
 <div class="buisnessCardShadow">
         <h1>
-          <span class=delayAppear>Hi I'm </span>Phil Tate<span class=delayAppear> a programmer <br>
+          <span class="delayAppear ">Hi I'm </span>Phil Tate<span class=delayAppear> a programmer <br>
             & full stack developer <br>
             <span class=fontOrnaments delayAppear>o </span><span class="h1Subtitle"> fancy a drink </span><span class=fontOrnaments> p</span>
           </span>
