--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -171,8 +171,8 @@ also cause a white space at bottom because now contributes to the height-->
 
 
 
-    <div class="pg2Text higher">What I Can Do
-      <img class="arrow " src="Images\replaceGeometricArrow.png" alt="arrow left">
+    <div class="pg2Text higher"><div class="bottomAlignBox"><div >What I Can Do</div><div>
+      <img class="arrow " src="Images\replaceGeometricArrow.png" alt="arrow left"></div></div>
     </div>
 
 
@@ -237,7 +237,9 @@ maybe even ajoining a space for the marble
     </div>
 
 
-    <div class="pg2Text lower">What I Can Use<img class="arrow right" src="Images\replaceGeometricArrow.png" alt="arrow right">
+    <div class="pg2Text lower">
+      <div>What I Can Use</div>
+      <div><img class="arrow right" src="Images\replaceGeometricArrow.png" alt="arrow right"><div>
     </div>
 
 
